package com.flowboard.payment.repository;

import com.flowboard.payment.entity.PaymentOrder;
import org.springframework.data.jpa.repository.JpaRepository;

import java.util.Optional;

public interface PaymentOrderRepository extends JpaRepository<PaymentOrder, Long> {
    Optional<PaymentOrder> findByProviderOrderId(String providerOrderId);
    void deleteByUserId(Long userId);
}
